k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  namespace: jdmik12-rpynzar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/container-names: "jdmik12-booking-service"
        instrumentation.opentelemetry.io/inject-java: "true"
        prometheus.io/path: "/jdmik12-booking-service/actuator/prometheus"
        prometheus.io/port: "http-port"
        prometheus.io/scrape: "true"
      labels:
        app: booking-service-app
    spec:
      containers:
        - name: jdmik12-booking-service
          image: "${IMAGE_REFERENCE}"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9097
              name: http-port
              protocol: TCP
          startupProbe:
            httpGet:
              path: /jdmik12-booking-service/actuator/health
              port: http-port
            initialDelaySeconds: 60
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /jdmik12-booking-service/actuator/health
              port: http-port
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /jdmik12-booking-service/actuator/health
              port: http-port
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 5
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "400Mi"
              cpu: "400m"
