k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: jdmik12-rpynzar
  labels:
    management.prefix: booking-service
    tech-stack: springboot
spec:
  selector:
    app: booking-service-app
  ports:
    - name: service-port
      port: 9097
      targetPort: http-port
  type: ClusterIP
