k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-service-ingress
  namespace: jdmik12-rpynzar
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.javaguru.team
      http:
        paths:
          - path: /jdmik12-booking-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: booking-service
                port:
                  name: service-port
